--- a/aWatchDemoWK/Base.lproj/Interface.storyboard
+++ b/aWatchDemoWK/Base.lproj/Interface.storyboard
@@ -1,16 +1,38 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="6724" systemVersion="14A389" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6711"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3735"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="10032"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="aWatchDemoWK" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="220" y="345"/>
+        </scene>
+        <!--Glance Interface Controller-->
+        <scene sceneID="h98-YS-nOX">
+            <objects>
+                <glanceController topTemplateType="groupLeftSmall" bottomTemplateType="extraLargeLargeBody1Footer" id="pBw-nQ-ly4">
+                    <items>
+                        <group alignment="left" id="x3b-8D-pBB">
+                            <items>
+                                <imageView width="1" height="1" alignment="left" id="Xef-w9-GOA"/>
+                            </items>
+                        </group>
+                        <label alignment="left" text="Label" id="Qyp-pr-OXP"/>
+                        <label alignment="left" text="Label" id="krn-vw-CGv"/>
+                        <label alignment="left" text="Label" id="RnZ-3l-t41"/>
+                        <label alignment="left" text="1234" id="im7-zc-LoA"/>
+                        <label alignment="left" text="1234" id="86p-Th-kK9"/>
+                        <label alignment="left" text="Label" id="X7B-LU-iHY"/>
+                        <label alignment="left" text="Footer" id="40g-S1-wM2"/>
+                    </items>
+                </glanceController>
+            </objects>
+            <point key="canvasLocation" x="230" y="929"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -31,7 +53,7 @@
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="4sK-HA-Art" customClass="NotificationController" customModule="aWatchDemoWK" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="643"/>
         </scene>
